small change only fixed Contact Form modal from overlapping on threeBoxesDiv

--- a/Redefine_Renovations/css/custom.css
+++ b/Redefine_Renovations/css/custom.css
@@ -74,6 +74,9 @@ html, body {
     line-height: 1.42857143;
     border-radius: 4px;
 }
+.textarea.form-control{
+    height: 1% !important;
+}
 
 /*--- main banner css ---*/
 .bannerCarousel{
@@ -93,7 +96,7 @@ html, body {
 /*--- three boxes css ---*/
 .threeBoxesContainer{
     position: absolute;
-    top: 65%;
+    top: 75%;
     bottom: 0;
     left: 0;
     right:0;
